# sdl_test_project

./: CMakeLists.txt
src/: main.cpp
